# SoloOps

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml
app/: __init__.py  agent.py  api.py  db.py  domain.py  playbooks.py  providers.py  scanner.py  service.py  settings.py  store.py  worker.py
app/static/: index.html
docs/: 00-project-charter.md  01-prd.md  02-architecture.md  03-agent-playbook-design.md  04-data-api-design.md  05-safety-compliance.md  06-evaluation.md  07-technical-stack.md  08-roadmap.md  09-engineering-guide.md  10-demo-story.md  11-deployment-runbook.md  12-resource-and-cost-plan.md  13-native-cloud-governance-positioning.md  README.md  architecture.md  baota-mysql-deployment.md  feasibility.md  iam.md  w7-pre-agent-todos.md  w8-deployment-and-demo-plan.md
evals/: agent_golden.jsonl  red_team_agent.jsonl
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  main.tsx  styles.css  types.ts
infra/: docker-compose.yml
scripts/: init_db.py  run_agent_eval.py
tests/: test_api.py
