[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "soloops"
version = "0.1.0"
description = "Evidence-first, approval-gated cloud operations agent MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
aliyun = [
  "alibabacloud-tea-openapi>=0.3.12",
  "alibabacloud-ecs20140526>=4.1.0",
  "alibabacloud-cms20190101>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]
